# haskell-sudoku

./: .gitignore  Definitions.hs  Loaders.hs  Printers.hs  README.md  SamplePuzzles.hs  Snippets.hs  Solvers.hs  dev-bench.hs  haskell-sudoku.cabal  puzzles.json  puzzles.txt  recordsudoku.hs  stack.yaml  sudoku-solver.hs  sudoku.hs
app/: Main.hs
src/: Definitions.hs  Main.hs  PerHouseSolvers.hs  Printers.hs  SamplePuzzles.hs  Snippets.hs  SolverDefinitions.hs  Solvers.hs  dev-bench.hs
src/Hudoku/: Definitions.hs  PerHouseSolvers.hs  Printers.hs  Snippets.hs  SolverDefinitions.hs  Solvers.hs
test/: PerHouseSolversSpec.hs  SnippetsSpec.hs  Spec.hs  doctests.hs
