name:                haskell-sudoku
version:             0.1.0.0
-- synopsis:
-- description:
homepage:            https://github.com/MattiRyynanen/haskell-sudoku#readme
license:             BSD3
license-file:        LICENSE
author:              Matti Ryynänen
maintainer:          geematti@gmail.com
copyright:           2021 Matti Ryynänen
category:            Web
build-type:          Simple
cabal-version:       >=1.10
extra-source-files:  README.md

executable haskell-sudoku.exe
  hs-source-dirs:      src
  main-is:             Main.hs
  default-language:    Haskell2010
  build-depends:       base >= 4.7 && < 5
  other-modules:       Snippets, Definitions, Printers, Solvers
