name:                haskell-sudoku
version:             0.1.0.0
-- synopsis:
-- description:
homepage:            https://github.com/MattiRyynanen/haskell-sudoku#readme
license:             BSD3
license-file:        LICENSE
author:              Matti Ryynänen
maintainer:          geematti@gmail.com
copyright:           2021 Matti Ryynänen
category:            Web
build-type:          Simple
cabal-version:       >=1.10
extra-source-files:  README.md

library
  exposed-modules:     Hudoku.Snippets, Hudoku.Definitions, Hudoku.SolverDefinitions, Hudoku.Printers, Hudoku.PerHouseSolvers, Hudoku.Solvers
  hs-source-dirs:      src
  build-depends:       base >= 4.7 && < 5, containers
  default-language:    Haskell2010

executable haskell-sudoku.exe
  hs-source-dirs:      app
  main-is:             Main.hs
  default-language:    Haskell2010
  build-depends:       base >= 4.7 && < 5, haskell-sudoku

test-suite haskell-sudoku-doctest
  type: exitcode-stdio-1.0
  main-is: doctests.hs
  hs-source-dirs: test
  build-depends: base >= 4.7 && < 5, containers, doctest, haskell-sudoku
  default-language: Haskell2010

test-suite haskell-sudoku-spec
  type: exitcode-stdio-1.0
  main-is: Spec.hs
  other-modules:
      SnippetsSpec,
      PerHouseSolversSpec
  hs-source-dirs:
      test
  build-depends:
      base >=4.7 && <5
    , containers
    , hspec >= 1.3
    , QuickCheck
    , haskell-sudoku
  default-language: Haskell2010
